syntax = "proto3";

package main;

option go_package = "./proto";

// 添加会员任务
message AddMemberTaskReq {
  int64 id = 1; //主键ID
  string task_name = 2; //任务名称
  string task_desc = 3; //任务描述
  int32 task_growth = 4; //赠送成长值
  int32 task_integral = 5; //赠送积分
  int32 task_type = 6; //任务类型：0-新手任务，1-日常任务，2-周常任务，3-月常任务
  int32 complete_count = 7; //需要完成次数
  int32 reward_type = 8; //奖励类型：0-积分成长值，1-优惠券，2-抽奖次数
  string reward_params = 9; //奖励参数JSON
  string start_time = 10; //任务开始时间
  string end_time = 11; //任务结束时间
  int32 status = 12; //状态：0-禁用，1-启用
  int32 sort = 13; //排序
  int64 create_by = 14; //创建人ID
}

message AddMemberTaskResp {
  string pong = 1;
}

// 删除会员任务
message DeleteMemberTaskReq {
  repeated int64 ids = 1;
}

message DeleteMemberTaskResp {
  string pong = 1;
}

// 更新会员任务
message UpdateMemberTaskReq {
  int64 id = 1; //主键ID
  string task_name = 2; //任务名称
  string task_desc = 3; //任务描述
  int32 task_growth = 4; //赠送成长值
  int32 task_integral = 5; //赠送积分
  int32 task_type = 6; //任务类型：0-新手任务，1-日常任务，2-周常任务，3-月常任务
  int32 complete_count = 7; //需要完成次数
  int32 reward_type = 8; //奖励类型：0-积分成长值，1-优惠券，2-抽奖次数
  string reward_params = 9; //奖励参数JSON
  string start_time = 10; //任务开始时间
  string end_time = 11; //任务结束时间
  int32 status = 12; //状态：0-禁用，1-启用
  int32 sort = 13; //排序
  int64 update_by = 16; //更新人ID
}

message UpdateMemberTaskResp {
  string pong = 1;
}

// 更新会员任务状态
message UpdateMemberTaskStatusReq {
  repeated int64 ids = 1; //主键ID
  int32 status = 12; //状态：0-禁用，1-启用
  int64 update_by = 16; //更新人ID
}

message UpdateMemberTaskStatusResp {
  string pong = 1;
}

// 查询会员任务详情
message QueryMemberTaskDetailReq {
    int64 id = 1;
}

message QueryMemberTaskDetailResp {
  int64 id = 1; //主键ID
  string task_name = 2; //任务名称
  string task_desc = 3; //任务描述
  int32 task_growth = 4; //赠送成长值
  int32 task_integral = 5; //赠送积分
  int32 task_type = 6; //任务类型：0-新手任务，1-日常任务，2-周常任务，3-月常任务
  int32 complete_count = 7; //需要完成次数
  int32 reward_type = 8; //奖励类型：0-积分成长值，1-优惠券，2-抽奖次数
  string reward_params = 9; //奖励参数JSON
  string start_time = 10; //任务开始时间
  string end_time = 11; //任务结束时间
  int32 status = 12; //状态：0-禁用，1-启用
  int32 sort = 13; //排序
  int64 create_by = 14; //创建人ID
  string create_time = 15; //创建时间
  int64 update_by = 16; //更新人ID
  string update_time = 17; //更新时间

}

// 分页查询会员任务列表
message QueryMemberTaskListReq {
  string task_name = 1; //任务名称
  int32 task_type = 2; //任务类型：0-新手任务，1-日常任务，2-周常任务，3-月常任务
  int32 reward_type = 3; //奖励类型：0-积分成长值，1-优惠券，2-抽奖次数
  string start_time = 4; //任务开始时间
  string end_time = 5; //任务结束时间
  int32 status = 6; //状态：0-禁用，1-启用
  int32 page_num = 7; //第几页
  int32 page_size = 8; //每页的数量
}

message MemberTaskListData {
  int64 id = 1; //主键ID
  string task_name = 2; //任务名称
  string task_desc = 3; //任务描述
  int32 task_growth = 4; //赠送成长值
  int32 task_integral = 5; //赠送积分
  int32 task_type = 6; //任务类型：0-新手任务，1-日常任务，2-周常任务，3-月常任务
  int32 complete_count = 7; //需要完成次数
  int32 reward_type = 8; //奖励类型：0-积分成长值，1-优惠券，2-抽奖次数
  string reward_params = 9; //奖励参数JSON
  string start_time = 10; //任务开始时间
  string end_time = 11; //任务结束时间
  int32 status = 12; //状态：0-禁用，1-启用
  int32 sort = 13; //排序
  int64 create_by = 14; //创建人ID
  string create_time = 15; //创建时间
  int64 update_by = 16; //更新人ID
  string update_time = 17; //更新时间

}

message QueryMemberTaskListResp {
  int64 total = 1;
  repeated  MemberTaskListData list = 2;
}

// 会员任务
service MemberTaskService {
  // 添加会员任务
  rpc AddMemberTask(AddMemberTaskReq) returns (AddMemberTaskResp){}
  // 删除会员任务
  rpc DeleteMemberTask(DeleteMemberTaskReq) returns (DeleteMemberTaskResp){}
  // 更新会员任务
  rpc UpdateMemberTask(UpdateMemberTaskReq) returns (UpdateMemberTaskResp ){}
  // 更新会员任务状态
  rpc UpdateMemberTaskStatus(UpdateMemberTaskStatusReq) returns (UpdateMemberTaskStatusResp ){}
  // 查询会员任务详情
   rpc QueryMemberTaskDetail(QueryMemberTaskDetailReq) returns (QueryMemberTaskDetailResp){}
  // 查询会员任务列表
  rpc QueryMemberTaskList(QueryMemberTaskListReq) returns (QueryMemberTaskListResp){}


}
